fix banner image alignment

--- a/samhage-main.css
+++ b/samhage-main.css
@@ -8,6 +8,13 @@ a {
 	color: #000;
 }
 
+img {
+	width: 100%;
+	/*height: 100%;*/
+	/*display: block;*/
+	/*vertical-align: middle;*/
+}
+
 a:hover {
 	color: #B82500;
 }
@@ -40,17 +47,11 @@ a:hover {
 	text-align: center;
 }
 
-.helper {
+/*.helper {
     display: inline-block;
     height: 100%;
     vertical-align: middle;
-}
-
-img {
-	width: 100%;
-	/*display: block;*/
-	vertical-align: middle;
-}
+}*/
 
 .project {
 	display: block;
